# booking-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 20260516_06f4e101d437_room_beds.py  20260516_2bd1d80bc63d_room_floor.py  20260516_53240dfdbcf2_initial_schema.py  20260516_a1add_admin_role.py  20260516_add_clients_table.py  20260516_add_hotel_slug.py  20260516_e7a75efd5fd7_hotel_services.py  20260516_f03f31d9cbe8_sessions.py  20260516_users_extra_fields.py  20260517_add_hotel_published_at.py  20260517_partner_staff_and_audit.py  20260518_add_booking_confirmed.py  20260518_add_booking_postpay.py  20260518_add_user_is_superadmin.py  20260519_add_partner_staff_invite.py  20260525_add_user_qr_image_url.py  20260526_drop_session_role.py  20260529_chat_threads_messages.py  20260530_users_bot_blocked_or_unreachable.py  20260531_hotel_meals_kind.py  20260531_room_beds_split.py  20260602_support_ticketing.py  20260612_amenities.py  20260612_support_simplify_to_chat.py  20260623_booking_guests_structural.py  20260623_room_status.py  20260625_partner_roles_m2m.py  20260625_partner_staff_name_fields.py  20260627_staff_role_per_hotel_scope.py
app/: main.py  utils.py
app/api/: admin.py  auth.py  chat_client.py  client.py  events.py  info.py  media_refs.py  partner.py  payments.py  public.py  qr.py  router.py  support.py  tg.py  uploads.py
app/core/: audit.py  auth_scope.py  (+9 more)
scripts/: gen_init_data.py  migrate_photos_to_media.py  promote_to_admin.py  seed_demo.py  seed_fictional.py  set_webhooks.py  webhook_info.py
(+62 files in other folders)
